--- a/00 - Hold-out example with scikit-learn.ipynb
+++ b/00 - Hold-out example with scikit-learn.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "Example adapted from the official documentation\n",
     "\n",
-    "Author: Umberto Michelucci, TOELT LLC"
+    "Author: Umberto Michelucci, TOELT LLC\n",
+    "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/toelt-llc/HSLU-WSCS_2025/blob/master/00%20-%20Hold-out%20example%20with%20scikit-learn.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
    ]
   },
   {
