--- a/02 - hyperparameter_tuning_with_scikit_learn.ipynb
+++ b/02 - hyperparameter_tuning_with_scikit_learn.ipynb
@@ -8,7 +8,11 @@
     "\n",
     "This notebooks contains a few examples on how hyperparameter tuning works with scikit-learn.\n",
     "\n",
-    "Author: Umberto Michelucci (umberto.michelucci@toelt.ai)."
+    "Author: Umberto Michelucci (umberto.michelucci@toelt.ai).\n",
+    "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/toelt-llc/HSLU-WSCS_2025/blob/master/02%20-%20hyperparameter_tuning_with_scikit_learn.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
    ]
   },
   {
