--- a/01 - Introduction_to_keras_tuner.ipynb
+++ b/01 - Introduction_to_keras_tuner.ipynb
@@ -10,7 +10,11 @@
     "\n",
     "Adapted and expanded from the original code by Umberto Michelucci.\n",
     "\n",
-    "Original code Copyright 2020 The TensorFlow Authors"
+    "Original code Copyright 2020 The TensorFlow Authors\n",
+    "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/toelt-llc/HSLU-WSCS_2025/blob/master/01%20-%20Introduction_to_keras_tuner.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
    ]
   },
   {
