--- a/01 - Introduction_to_keras_tuner.ipynb
+++ b/01 - Introduction_to_keras_tuner.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:19:58.047090Z",
@@ -108,7 +108,8 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow import keras"
+    "from tensorflow import keras\n",
+    "import keras_tuner as kt"
    ]
   },
   {
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:20:00.423105Z",
@@ -135,24 +136,7 @@
    "outputs": [],
    "source": [
     "# Run this only if necessary\n",
-    "!pip install -q -U keras-tuner"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-12-07T03:20:02.783518Z",
-     "iopub.status.busy": "2023-12-07T03:20:02.782775Z",
-     "iopub.status.idle": "2023-12-07T03:20:03.130579Z",
-     "shell.execute_reply": "2023-12-07T03:20:03.129567Z"
-    },
-    "id": "_leAIdFKAxAD"
-   },
-   "outputs": [],
-   "source": [
-    "import keras_tuner as kt"
+    "# !pip install -q -U keras-tuner"
    ]
   },
   {
@@ -210,7 +194,22 @@
     },
     "id": "OHlHs9Wj_PUM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+      "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+      "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+      "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+      "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 1us/step\n"
+     ]
+    }
+   ],
    "source": [
     "(img_train, label_train), (img_test, label_test) = keras.datasets.fashion_mnist.load_data()"
    ]
@@ -332,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:20:03.659627Z",
@@ -344,22 +343,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metal device set to: Apple M1 Max\n",
-      "\n",
-      "systemMemory: 32.00 GB\n",
-      "maxCacheSize: 10.67 GB\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-10 13:21:10.734618: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2024-01-10 13:21:10.734778: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "/Users/arnaud/miniconda3/envs/wscs/lib/python3.12/site-packages/keras/src/layers/reshaping/flatten.py:37: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
      ]
     }
    ],
@@ -420,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:20:05.984275Z",
@@ -446,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:20:05.991445Z",
@@ -461,16 +449,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 30 Complete [00h 01m 36s]\n",
-      "val_accuracy: 0.8867499828338623\n",
+      "Trial 16 Complete [00h 00m 12s]\n",
+      "val_accuracy: 0.8770833611488342\n",
       "\n",
-      "Best val_accuracy So Far: 0.8929166793823242\n",
-      "Total elapsed time: 00h 20m 09s\n",
+      "Best val_accuracy So Far: 0.8774999976158142\n",
+      "Total elapsed time: 00h 03m 42s\n",
       "\n",
-      "The hyperparameter search is complete. The optimal number of units in the first densely-connected\n",
-      "layer is 128 and the optimal learning rate for the optimizer\n",
-      "is 0.001.\n",
-      "\n"
+      "Search: Running Trial #17\n",
+      "\n",
+      "Value             |Best Value So Far |Hyperparameter\n",
+      "128               |128               |units\n",
+      "0.001             |0.001             |learning_rate\n",
+      "10                |4                 |tuner/epochs\n",
+      "4                 |2                 |tuner/initial_epoch\n",
+      "2                 |2                 |tuner/bracket\n",
+      "2                 |1                 |tuner/round\n",
+      "0012              |0001              |tuner/trial_id\n",
+      "\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 3ms/step - accuracy: 0.8905 - loss: 0.3006 - val_accuracy: 0.8775 - val_loss: 0.3397\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1489/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.8960 - loss: 0.2808"
      ]
     }
    ],
@@ -480,7 +479,7 @@
     "# CAREFUL: IT TAKES SOME TIME!\n",
     "#\n",
     "#\n",
-    "tuner.search(img_train, label_train, epochs=50, validation_split=0.2, callbacks=[stop_early])\n",
+    "tuner.search(img_train, label_train, epochs=5, validation_split=0.2, callbacks=[stop_early])\n",
     "\n",
     "# Get the optimal hyperparameters\n",
     "best_hps=tuner.get_best_hyperparameters(num_trials=1)[0]\n",
@@ -505,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:28:48.515436Z",
@@ -26541,7 +26540,7 @@
    "source": [
     "# Build the model with the optimal hyperparameters and train it on the data for 50 epochs\n",
     "model = tuner.hypermodel.build(best_hps)\n",
-    "history = model.fit(img_train, label_train, epochs=50, validation_split=0.2)\n",
+    "history = model.fit(img_train, label_train, epochs=5, validation_split=0.2)\n",
     "\n",
     "val_acc_per_epoch = history.history['val_accuracy']\n",
     "best_epoch = val_acc_per_epoch.index(max(val_acc_per_epoch)) + 1\n",
@@ -26559,7 +26558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:31:57.757140Z",
@@ -49539,7 +49538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-07T03:34:44.275340Z",
@@ -49700,7 +49699,8 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "wscs",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -49713,7 +49713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
