--- a/ap_notebooks/ap1.ipynb
+++ b/ap_notebooks/ap1.ipynb
@@ -22,7 +22,10 @@
    "id": "eb29219d",
    "metadata": {},
    "source": [
-    "**Open in collab** : "
+    "**Open in colab** : \n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/toelt-llc/HSLU-WSCS_2025/blob/master/ap_notebooks/ap1.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
    ]
   },
   {
