--- a/ap_notebooks/ap2.ipynb
+++ b/ap_notebooks/ap2.ipynb
@@ -13,7 +13,10 @@
    "id": "08f4e8b5",
    "metadata": {},
    "source": [
-    "**Open in collab** : "
+    "**Open in colab** : \n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/toelt-llc/HSLU-WSCS_2025/blob/master/ap_notebooks/ap2.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
    ]
   },
   {
