--- a/ap_notebooks/ap1.ipynb
+++ b/ap_notebooks/ap1.ipynb
@@ -10,6 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
+    "import zipfile\n",
     "import os\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -36,6 +37,26 @@
     "## Data\n",
     "You will need to download the dataset from [kaggle](https://www.kaggle.com/datasets/arnavr10880/concrete-crack-images-for-classification?resource=download).  \n",
     "Once extracted, rename the downloaded folder to *concrete* and place it into the *data* folder "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55b05b34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_path = \"/content/archive.zip\"\n",
+    "extract_to = \"/content/datasets/concrete\"\n",
+    "\n",
+    "# Create the target directory if it doesn't exist\n",
+    "os.makedirs(extract_to, exist_ok=True)\n",
+    "\n",
+    "# Unzip the file\n",
+    "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(extract_to)\n",
+    "\n",
+    "print(f\"Extracted to {extract_to}\")\n"
    ]
   },
   {
